# system_tray_unmounter_rust

./: Cargo.toml
src/: main.rs
