[package]
name = "system-tray-mounter"
version = "0.1.0"
edition = "2021"
description = "Huahuahuahua"

[package.metadata.bundle]
name = "System-Tray-Mounter"
identifier = "com.aok.blast"
icon = ["icon.png"]
version = "1.0.0"
resources = ["icon.png"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "System tray unmount tool for Mac OS"
long_description = """
System tray unmount tool for Mac OS
"""
deb_depends = []
osx_frameworks = []
osx_url_schemes = ["com.aok.blast"]

[dependencies]
byte-unit = "4.0.18"
image = "0.24.5"
nix = "0.26.2"
rand = "0.8.5"
sysinfo = "0.27.7"
tao = {version = "0.17.0", features = [ "tray" ]}

